--- a/styles.css
+++ b/styles.css
@@ -407,22 +407,16 @@ li:nth-of-type(1) a {
     grid-template-columns: 1fr;
     width: 50%;
   }
-  aside .scroll h3, p {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    margin: auto 0;
-  }
+  
   aside .scroll section {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
     align-content: center;
   }
   aside .scroll h3 {
     padding-bottom: 0px;
-    align-content: top;
+    align-content: end;
   }
   aside .scroll section img {
     grid-column-start: 1;
